--- a/statistics.html
+++ b/statistics.html
@@ -81,11 +81,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/nubank/jobs/1893969?gh_src=1d5d44ee1'>Job Application for Data Scientist (Econometrics/Statistics Specialist) at Nubank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nubank/jobs/1893969?gh_src=1d5d44ee1'>Job Application for Data Scientist (Econometrics/Statistics Specialist) at Nubank</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://gradschool.umd.edu/education/edms'>Measurement, Statistics and Evaluation | The University of Maryland Graduate School</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gradschool.umd.edu/education/edms'>Measurement, Statistics and Evaluation | The University of Maryland Graduate School</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -173,7 +173,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Brisbane</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Eurofins/743999697944376-statisticien-ne-h-f-'>Eurofins STATISTICIEN(NE) (H/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Eurofins/743999697944376-statisticien-ne-h-f-'>Eurofins STATISTICIEN(NE) (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -199,7 +199,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/statistical-programmer-%E2%80%93-data-warehouse-specialist-31532'>Statistical Programmer ? Data Warehouse Specialist - Syneos Health Careers</a></h5> 
+<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/statistical-programmer-%E2%80%93-data-warehouse-specialist-31532'>Statistical Programmer ? Data Warehouse Specialist - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -215,7 +215,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/invaiosciences/jobs/4490278002'>Job Application for Statistician at Invaio Sciences</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/invaiosciences/jobs/4490278002'>Job Application for Statistician at Invaio Sciences</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -236,7 +236,7 @@ science, or a related area by the time of appointment. Successful candidates?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<h5><a href='https://medtronic.referrals.selectminds.com/jobs/68635?lset=ru_RU'>Statistician - ????????????? ???? Medtronic</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medtronic.referrals.selectminds.com/jobs/68635?lset=ru_RU'>Statistician - ????????????? ???? Medtronic</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 ??. ????? ... Participate in statistical support for CRF design, database development, data 
 validation plan and blinded data review; - Performs SAS programming to 
@@ -337,12 +337,12 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">Bangkok</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<h5><a href='https://uva.wd1.myworkdayjobs.com/en-US/UVAJobs/job/Charlottesville-VA/Assistant-Professor-of-Statistics_R0010727-1'>Assistant Professor of Statistics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uva.wd1.myworkdayjobs.com/en-US/UVAJobs/job/Charlottesville-VA/Assistant-Professor-of-Statistics_R0010727-1'>Assistant Professor of Statistics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 27, 2019 ... ... at the Medical School, Quantitative Collaborative (Social Sciences), the newly 
 created School of Data Science, and other departments and schools. Faculty?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/011C117D5D'>Statistics & Data Corporation (SDC) - Jobs: Clinical Data Manager - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/011C117D5D'>Statistics & Data Corporation (SDC) - Jobs: Clinical Data Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -389,11 +389,11 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-09</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/acadiapharmaceuticals/jobs/4442490002'>Job Application for Temporary Biostatistician at ACADIA Pharmaceuticals</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/acadiapharmaceuticals/jobs/4442490002'>Job Application for Temporary Biostatistician at ACADIA Pharmaceuticals</a></h5> 
 <p><span class="badge badge-light">San Diego, California United States</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://favortechconsulting.applytojob.com/apply/r9pLSukRw0/MathematicianStatistician'>Mathematician/Statistician - Favor TechConsulting - Career Page</a></h5> 
+<h5><a href='http://favortechconsulting.applytojob.com/apply/r9pLSukRw0/MathematicianStatistician'>Mathematician/Statistician - Favor TechConsulting - Career Page</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
